--- a/DattNet_code_13_09_23_version.ipynb
+++ b/DattNet_code_13_09_23_version.ipynb
@@ -35,7 +35,7 @@
     "tags": []
    },
    "source": [
-    "### **DattNet file:**"
+    "### **DattNet section:**"
    ]
   },
   {
@@ -345,7 +345,7 @@
     "tags": []
    },
    "source": [
-    "### **DataFunctions file:**"
+    "### **DataFunctions section:**"
    ]
   },
   {
@@ -674,7 +674,7 @@
     "tags": []
    },
    "source": [
-    "### **LogFunctions file:**"
+    "### **LogFunctions section:**"
    ]
   },
   {
@@ -750,7 +750,7 @@
     "tags": []
    },
    "source": [
-    "### **Support Functions file:**"
+    "### **Support Functions section:**"
    ]
   },
   {
@@ -928,7 +928,7 @@
     "tags": []
    },
    "source": [
-    "### **Training File**"
+    "### **Training section**"
    ]
   },
   {
@@ -1141,7 +1141,7 @@
     "tags": []
    },
    "source": [
-    "### **Testing File**"
+    "### **Testing section**"
    ]
   },
   {
@@ -1225,7 +1225,7 @@
    "id": "204f2b27-4c05-4ce7-9a19-57f94a60be60",
    "metadata": {},
    "source": [
-    "### **Parameters File**"
+    "### **Parameters section**"
    ]
   },
   {
